--- a/style.css
+++ b/style.css
@@ -5,11 +5,13 @@
 @import url("./styles/profile.css");
 
 :root { /* inicialização de variáveis para ficar mais fácil modificar ao longo do tempo */
-    --purple: #3F0071;
-    --dark-purple: #150050;
+    --purple: #3C0753;
+    --dark-purple: #030637;
     --black: #000000;
     --pink: #FB2576;
     --white: #f6f6f6;
+    --soft-pink: #E95793;
+    --dark-pink: #720455;
 }
 
 * {
@@ -27,41 +29,18 @@ main {
 .introducao {
     background: url("/assets/wallpaper.jpg");
     background-size: 100%;
-    height: 500px;
+    height: 40vh;
     -webkit-mask-image: linear-gradient( to bottom, var(--purple) 1%, transparent);
-}
-
-h2 {
-    font-size: 30px;
 }
 
 @media (max-width: 1024px) {
     .introducao {
-        max-height: 200px;
-    }
-    #titulo {
-        font-size: 24px;
-    }
-    h2 {
-        font-size: 16px;
-    }
-    .see-more {
-        font-size: 16px;
-    }
-    .menu {
-        gap: 5%;
-    }
-    .filmes {
-        margin-bottom: 15px;
-
-    }
-    .poster {
-        height: 150px;
-        width: 100px;
-        padding: 10px;
+        max-height: 300px;
     }
 }
 
-@media (max-width: 428px) {
-
+@media (max-width: 390px) {
+    .introducao {
+        max-height: 150px;
+    }
 }
