--- a/styles/header.css
+++ b/styles/header.css
@@ -13,8 +13,19 @@ header {
 .menu {
     display: flex;
     align-items: center;
-    margin: 0 5% 0 5%;
-    gap: 10px;
+    justify-content: end;
+    gap: 8%;
+    padding-right: 8%;
+}
+
+.menu-option {
+    display: flex;
+    align-items: center;
+    gap: 8%;
+}
+
+.header-icon {
+    height: 24px;
 }
 
 #search {
@@ -53,7 +64,7 @@ header {
 
 .item-menu:hover {
     background-color: var(--pink);
-    border-radius: 10%;
+    border-radius: 10px;
     color: var(--black);
     font-weight: bold;
 }
@@ -67,6 +78,8 @@ header {
     position: absolute;
     background-color: var(--black);
     list-style: none;
+    align-items: end;
+
 }
 
 #profile:checked ~ .profile-lista {
@@ -75,15 +88,55 @@ header {
     z-index: 1;
     top: 100%;
     text-decoration: none;
-    width: auto;
     text-align: right;
-    margin-left: 150px;
+    padding: 24px;
+    gap: 16px;
 }
 
 .profile-lista-item {
-    padding: 20px;
+    transition: 0.5s;
+    border-radius: 10px;
+    padding: 8px;
+}
+
+.profile-lista-item:hover {
+    background-color: var(--pink);
+    color: var(--black);
 }
 
 .profile-lista-link {
     text-decoration: none;
+    width: 100%;
+}
+
+.profile-lista-link:hover {
+    color: var(--black);
+}
+
+@media screen and (max-width: 1024px) {
+
+    #profile:checked ~ .profile-lista {
+        margin-left: 200px;
+    }
+
+    .profile-lista-item {
+        padding: 8px;
+    }
+
+}
+
+@media screen and (max-width: 390px) {
+
+    #titulo {
+        height: 24px;
+    }
+
+    .item-menu {
+        display: none;
+    }
+
+    .header-icon {
+        height: 20px;
+    }
+    
 }
