--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 40px;
-    padding: 4% 16%;
+    padding: 2% 16%;
 }
 
 /* CONTAINER LINHA FILMES */
@@ -43,17 +43,22 @@
 .swiper {
     display: flex;
     width: 100%;
-    gap: 6%;
+    gap: 4%;
     overflow: auto;
 }
 
 .swiper::-webkit-scrollbar {
     background-color: var(--soft-pink);
     border-radius: 10px;
+    height: 10px;
 }
 
-.swiper::-webkit-scrollbar-button {
-    background-color: var(--dark-pink);
+.swiper::-webkit-scrollbar-button:single-button {
+    display: none;
+}
+
+.swiper::-webkit-scrollbar-button:single-button:horizontal:decrement {
+    color: var(--black);
 }
 
 .swiper::-webkit-scrollbar-thumb {
@@ -67,8 +72,8 @@
 }
 
 .poster {
-    width: 210px;
-    height: 300px;
+    width: 150px;
+    height: 200px;
     box-shadow: 8px 8px 16px var(--black);
     transition: 0.5s;
     padding: 16px;
@@ -82,7 +87,7 @@
     transition: 0.5s;
     padding: 0;
     max-width: 300px;
-    max-height: 390px;
+    max-height: 400px;
 }
 
 #movie_selected {
