--- a/style.css
+++ b/style.css
@@ -34,14 +34,19 @@ main {
     -webkit-mask-image: linear-gradient( to bottom, var(--purple) 1%, transparent);
 }
 
+.wallpaper-intro {
+    width: 100%;
+    padding-top: 10px;
+}
+
 @media (max-width: 1024px) {
     .introducao {
-        max-height: 300px;
+        max-height: 36vh;
     }
 }
 
-@media (max-width: 390px) {
+@media (max-width: 768px) {
     .introducao {
-        max-height: 150px;
+        max-height: 28vh;
     }
 }
